Fixed bug: when collapse shape properties panel it becomes fully invisible

--- a/modules/activiti-webapp-explorer2/src/main/webapp/editor-app/css/style.css
+++ b/modules/activiti-webapp-explorer2/src/main/webapp/editor-app/css/style.css
@@ -307,8 +307,8 @@ div.propertySection {
 }
 
 .propertySection.collapsed {
-	max-height: 50px;
-	height: 50px;
+    max-height: 100px;
+    height: 100px;
 	overflow: hidden;
 }
 
